--- a/src/app/pages/journal/journal.component.css
+++ b/src/app/pages/journal/journal.component.css
@@ -1,13 +1,47 @@
 .scroll-hide {
-    overflow-y: auto;           /* Allows vertical scrolling */
-    scrollbar-width: none;      /* For Firefox */
-    -ms-overflow-style: none;   /* For Internet Explorer and Edge */
-  }
-  
-  .scroll-hide::-webkit-scrollbar {
-    display: none;              /* Hides the scrollbar for WebKit browsers */
-  }
+  overflow-y: auto; /* Allows vertical scrolling */
+  scrollbar-width: none; /* For Firefox */
+  -ms-overflow-style: none; /* For Internet Explorer and Edge */
+}
 
-  /* input css */
-  /* border border-gray-200 rounded-xl focus:outline-none focus:ring-4 focus:ring-blue-300 focus:border-blue-500 focus:border-2 inter-4 text-base text-gray-500 transition duration-300 */
+.scroll-hide::-webkit-scrollbar {
+  display: none; /* Hides the scrollbar for WebKit browsers */
+}
 
+/* input css */
+/* border border-gray-200 rounded-xl focus:outline-none focus:ring-4 focus:ring-blue-300 focus:border-blue-500 focus:border-2 inter-4 text-base text-gray-500 transition duration-300 */
+
+.cdk-drag-preview {
+  border: none;
+  cursor: grab;
+  box-sizing: border-box;
+  border-radius: 4px;
+  padding: 5px;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+    0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+::ng-deep .tox-statusbar {
+  display: none !important;
+}
+
+::ng-deep .tox-tinymce {
+  border: 0px solid #eee !important;
+  border-radius: 0px !important;
+}
+
+.z-1301 {
+  z-index: 1301;
+}
