--- a/src/app/pages/journal/journal.component.html
+++ b/src/app/pages/journal/journal.component.html
@@ -135,11 +135,11 @@
 </aside>
 
 <div
-  class="w-full flex justify-between fixed bg-white top-0 pl-64 pe-8 ps-72 py-2"
+  class="w-full flex justify-between fixed bg-white top-0 pl-64 pe-8 ps-72 py-2 z-1301"
 >
   <div class="relative">
     <input
-      class="xl:w-[576px] w-[480px] py-4 px-11 border border-gray-200 rounded-xl hover:border-2 hover:border-gray-500 focus:outline-none focus:ring-4 focus:ring-blue-300 focus:border-blue-500 focus:border-2 inter-4 text-base text-gray-500 transition duration-300"
+      class="xl:w-[576px] w-[480px] py-4 px-11 border border-gray-200 rounded-xl hover:border-2 hover:border-blue-500 focus:outline-none focus:ring-4 focus:ring-blue-300 focus:border-blue-500 focus:border-2 inter-4 text-base text-gray-500 transition duration-300"
       type="search"
       placeholder="Search"
     />
@@ -287,44 +287,27 @@
         <div class="inter-5 text-xs text-gray-400">No additional text</div>
       </div>
     </div>
-    <div class="flex flex-col gap-1">
-      <div class="inter-6 text-sm text-gray-950">Home dashboard</div>
-      <div class="flex gap-2 items-center">
-        <div class="inter-5 text-xs text-gray-600">{{ currentDate }}</div>
-        <div class="inter-5 text-xs text-gray-400">Cashflow v2 ==ads...</div>
-      </div>
-    </div>
   </div>
 
-  <!--------------------------------------------------------- Year wise div ---------------------------------------------------------->
+  <!------------------------------------------------------------------------------------------------------------------------------------------------------------------------ All Journal div ----------------------------------------------- ------------------------------------------------------------------------------------------------------------------>
 
   <div class="flex flex-col gap-3 mt-6 mx-3">
-    <div class="inter-5 text-sm text-gray-400">2024</div>
-    <div class="flex flex-col divide-y-[1px] divide-gray-200">
-      <div class="py-2 flex flex-col gap-1">
-        <div class="inter-6 text-sm text-gray-950">Daily Reflections:</div>
+    <div class="inter-5 text-sm text-gray-400">All</div>
+    <div
+      cdkDropList
+      class="flex flex-col divide-y-[1px] divide-gray-200 example-list"
+      (cdkDropListDropped)="drop($event)"
+    >
+      <div
+        class="py-2 flex flex-col gap-1 bg-white example-box cursor-pointer"
+        *ngFor="let item of journalEntries"
+        cdkDrag
+      >
+        <div class="inter-6 text-sm text-gray-950">{{ item.title }}</div>
         <div class="flex gap-2 items-center">
           <div class="inter-5 text-xs text-gray-600">{{ currentDate }}</div>
           <div class="truncate inter-5 text-xs text-gray-400">
-            Introduced a new espressos for the
-          </div>
-        </div>
-      </div>
-      <div class="py-2 flex flex-col gap-1">
-        <div class="inter-6 text-sm text-gray-950">Goals and Objectives:</div>
-        <div class="flex gap-2 items-center">
-          <div class="inter-5 text-xs text-gray-600">{{ currentDate }}</div>
-          <div class="truncate inter-5 text-xs text-gray-400">
-            Increased daily foot traffic by populating crowd
-          </div>
-        </div>
-      </div>
-      <div class="py-2 flex flex-col gap-1">
-        <div class="inter-6 text-sm text-gray-950">Financial Updates:</div>
-        <div class="flex gap-2 items-center">
-          <div class="inter-5 text-xs text-gray-600">{{ currentDate }}</div>
-          <div class="truncate inter-5 text-xs text-gray-400">
-            Today's revenue: $1,200; expenses: $1,000x
+            {{ item.content }}
           </div>
         </div>
       </div>
@@ -825,7 +808,7 @@
         <div class="inter-5 text-gray-700 text-sm">Title</div>
         <div>
           <input
-            class="py-[10px] px-[14px] w-full border border-gray-200 rounded-xl hover:border-2 hover:border-gray-500 focus:outline-none focus:ring-4 focus:ring-blue-300 focus:border-blue-500 focus:border-2 inter-4 text-base text-gray-500 transition duration-300"
+            class="py-[10px] px-[14px] w-full border border-gray-200 rounded-xl hover:border-2 hover:border-blue-500 focus:outline-none focus:ring-4 focus:ring-blue-300 focus:border-blue-500 focus:border-2 inter-4 text-base text-gray-500 transition duration-300"
             placeholder="Enter your title"
             formControlName="title"
           />
@@ -837,11 +820,23 @@
       <div class="flex flex-col gap-[6px]">
         <div class="inter-5 text-gray-700 text-sm">Description</div>
         <div>
-          <textarea
-            class="py-[10px] h-32 px-[14px] w-full border border-gray-200 rounded-xl hover:border-2 hover:border-gray-500 focus:outline-none focus:ring-4 focus:ring-blue-300 focus:border-blue-500 focus:border-2 inter-4 text-base text-gray-500 transition duration-300"
+          <editor
+            class="w-full border border-gray-200 rounded-md inter-4 text-base text-gray-500 transition duration-300"
             placeholder="Enter your Description"
             formControlName="description"
-          ></textarea>
+            apiKey="y74gca2ql9thvfv5al10yeeq95ysi1o6bvwa0nz56tpsouf2"
+            [init]="{
+              plugins: [
+                'image',
+                'link',
+                'lists',
+                'media',
+                'searchreplace',
+                'table',
+                'visualblocks'
+              ]
+            }"
+          ></editor>
           @if (description && description.invalid && description.touched) {
           <p class="inter-4 text-red-500 ps-2">Description is required</p>
           }
@@ -854,8 +849,8 @@
             <div class="relative w-full">
               <input
                 id="tagInput"
-                (keydown.enter)="addTag()"
-                class="py-[10px] px-[14px] w-full border border-gray-200 rounded-xl hover:border-2 hover:border-gray-500 focus:outline-none focus:ring-4 focus:ring-blue-300 focus:border-blue-500 focus:border-2 inter-4 text-base text-gray-500 transition duration-300"
+                (keyup.enter)="addTag()"
+                class="py-[10px] px-[14px] w-full border border-gray-200 rounded-xl hover:border-2 hover:border-blue-500 focus:outline-none focus:ring-4 focus:ring-blue-300 focus:border-blue-500 focus:border-2 inter-4 text-base text-gray-500 transition duration-300"
                 placeholder="Enter your tags"
                 formControlName="tagEnter"
               />
@@ -1165,22 +1160,121 @@
           </div>
         </div>
       </div>
+
+      <!------------------------------------------------------------------------------------------------------------- --------------------------------------------- File Input -------------------------------------------------- ---------------------------------------------------------------------------------------------------------->
+
       <div class="flex flex-col gap-[6px]">
         <div class="inter-5 text-gray-700 text-sm">Files</div>
-        <div>
+        <div class="space-y-3">
+          <ul *ngIf="files.length > 0" class="flex flex-col gap-3">
+            <li
+              *ngFor="let file of files; let i = index"
+              class="flex items-center gap-3"
+            >
+              <div>
+                <img
+                  [src]="getFileIcon(file)"
+                  alt="file icon"
+                  class="w-10 h-auto rounded-md"
+                />
+              </div>
+              <div class="flex flex-col gap-1 w-full">
+                <div class="flex justify-between">
+                  <a
+                    [href]="file.fileUrl"
+                    class="inter-5 text-gray-700 text-sm hover:text-[#7F56D9] hover:font-semibold hover:underline"
+                  >
+                    {{ file.file.name }}
+                  </a>
+                  <div>
+                    <button class="" (click)="removeFile(i)">
+                      <svg
+                        class="w-[24px] h-[24px] text-gray-500 hover:text-red-500"
+                        aria-hidden="true"
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="24"
+                        height="24"
+                        fill="none"
+                        viewBox="0 0 24 24"
+                      >
+                        <path
+                          stroke="currentColor"
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                          stroke-width="2"
+                          d="M5 7h14m-9 3v8m4-8v8M10 3h4a1 1 0 0 1 1 1v3H9V4a1 1 0 0 1 1-1ZM6 7h12v13a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V7Z"
+                        />
+                      </svg>
+                    </button>
+                  </div>
+                </div>
+                <div class="w-full">
+                  <p class="inter-4 text-sm text-gray-600">
+                    {{ file.file.size / 1024 | number : "1.2-2" }} KB
+                  </p>
+                </div>
+                <div class="flex justify-between items-center gap-3">
+                  <div
+                    class="relative w-full flex h-2 rounded-full bg-gray-200"
+                  >
+                    <div
+                      class="absolute top-0 h-2 rounded-full bg-purple-600"
+                      [style.width.%]="file.progress"
+                    ></div>
+                  </div>
+                  <div class="inter-5 text-gray-700 text-sm">
+                    {{ file.progress | number : "1.0-0" }}%
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
           <input
-            id="fileInput"
             type="file"
+            (change)="onFileSelect($event)"
+            class="hidden"
+            #fileInput
             multiple
-            (change)="onFileSelected($event)"
-            class="py-[10px] px-[14px] w-full border border-gray-200 rounded-xl hover:border-2 hover:border-gray-500 focus:outline-none focus:ring-4 focus:ring-blue-300 focus:border-blue-500 focus:border-2 inter-4 text-base text-gray-500 transition duration-300 mt-2"
           />
-          <div *ngIf="fileNames.length > 0">
-            <h4 class="mt-4">Selected Files:</h4>
-            <ul>
-              <li *ngFor="let file of fileNames">{{ file }}</li>
-            </ul>
+          <div
+            class="p-4 flex flex-col gap-3 items-center justify-center bg-gray-100 rounded-xl border-2 border-dashed border-gray-300 cursor-pointer"
+            (click)="fileInput.click()"
+          >
+            <div>
+              <img
+                class="p-[10px] w-10 h-10 shadow-sm shadow-[#1018280D] border border-gray-200 rounded-lg"
+                src="../../../assets/images/icons/file-upload.png"
+                alt=""
+              />
+            </div>
+            <div class="flex flex-col gap-1 items-center">
+              <div class="inter-6 text-[#6941C6] text-sm">
+                <span class="inter-4 text-gray-600 text-sm"
+                  >Click to upload</span
+                >
+                or drag and drop
+              </div>
+              <div class="text-xs text-gray-600 inter-4">(max. 5mo)</div>
+            </div>
           </div>
+        </div>
+      </div>
+      <div class="w-full flex justify-end gap-3 pt-4">
+        <div>
+          <button
+            (click)="onCancelAddJournal()"
+            class="px-4 py-[10px] inter-6 text-sm font-semibold text-gray-700 bg-white border border-gray-200 rounded-lg hover:bg-gray-100"
+          >
+            Cancel
+          </button>
+        </div>
+        <div>
+          <button
+            type="submit"
+            class="px-4 py-[10px] inter-6 text-sm font-semibold text-white bg-[#7F56D9] border border-[#7F56D9] rounded-lg hover:bg-[#6941C6] hover:border-[#6941C6]"
+          >
+            Save
+          </button>
         </div>
       </div>
     </form>
