Features: Firebase Hosting

--- a/src/app/pages/journal/journal.component.html
+++ b/src/app/pages/journal/journal.component.html
@@ -135,7 +135,7 @@
 </aside>
 
 <div
-  class="w-full flex justify-between fixed bg-white top-0 pl-64 pe-8 ps-72 py-2 z-1301"
+  class="w-full flex justify-between fixed bg-white top-0 pe-8 ps-72 py-2 z-3"
 >
   <div class="relative">
     <input
