--- a/src/app/pages/journal/journal.component.html
+++ b/src/app/pages/journal/journal.component.html
@@ -303,11 +303,11 @@
         *ngFor="let item of journalEntries"
         cdkDrag
       >
-        <div class="inter-6 text-sm text-gray-950">{{ item.title }}</div>
+        <div class="inter-6 text-sm text-gray-950">{{ item.title }}:</div>
         <div class="flex gap-2 items-center">
           <div class="inter-5 text-xs text-gray-600">{{ currentDate }}</div>
           <div class="truncate inter-5 text-xs text-gray-400">
-            {{ item.content }}
+            {{ item.description }}
           </div>
         </div>
       </div>
@@ -760,22 +760,39 @@
       </div>
       }
     </div>
-    <div class="relative border border-gray-200 rounded-xl p-4 w-fit">
-      <img
-        class="w-80 h-auto rounded-lg"
-        src="../../../assets/images/video-person.png"
-        alt=""
-      />
-      <img
-        class="w-14 h-auto absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 cursor-pointer bg-transparent rounded-full"
-        src="../../../assets/images/video-play.png"
-        alt=""
-      />
-      <img
-        class="w-8 h-auto absolute top-6 right-6 cursor-pointer"
-        src="../../../assets/images/video-delete.png"
-        alt=""
-      />
+    <h3 class="text-lg font-semibold">Videos:</h3>
+    <div class="rounded-xl w-96">
+      <div class="grid grid-cols-1 gap-4 mt-2">
+        <div *ngFor="let video of allVideos">
+          <div class="relative p-4 border border-gray-200 rounded-xl">
+            <video
+              [src]="getVideoUrl(video.videoBlob)"
+              controls
+              class="border border-gray-200 rounded-xl"
+            ></video>
+            <div class="absolute top-8 right-8">
+              <svg
+                (click)="openDeleteConfirmation(video.id)"
+                class="w-8 h-8 bg-[#0C111D4D] p-1 rounded-full cursor-pointer hover:bg-[#0C111D] text-white"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                fill="none"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M5 7h14m-9 3v8m4-8v8M10 3h4a1 1 0 0 1 1 1v3H9V4a1 1 0 0 1 1-1ZM6 7h12v13a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V7Z"
+                />
+              </svg>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="p-4 flex gap-3 border border-gray-200 rounded-xl">
       <div>
@@ -801,7 +818,7 @@
   <div class="flex flex-col px-8 py-6 w-full gap-6">
     <form
       [formGroup]="journalForm"
-      (ngSubmit)="journalFormSubmit()"
+      (keydown.enter)="preventSubmit($event)"
       class="w-full flex flex-col gap-6"
     >
       <div class="flex flex-col gap-[6px]">
@@ -850,6 +867,7 @@
               <input
                 id="tagInput"
                 (keyup.enter)="addTag()"
+                (blur)="onBlurTag()"
                 class="py-[10px] px-[14px] w-full border border-gray-200 rounded-xl hover:border-2 hover:border-blue-500 focus:outline-none focus:ring-4 focus:ring-blue-300 focus:border-blue-500 focus:border-2 inter-4 text-base text-gray-500 transition duration-300"
                 placeholder="Enter your tags"
                 formControlName="tagEnter"
@@ -873,21 +891,22 @@
                 />
               </svg>
             </div>
-            @if(tagEnter && tagEnter.touched){@if (tags.length === 0) {
+            @if( hasInteractedTags && tagEnter &&
+            tagEnter.errors?.['minimumOneTag']) {
             <p class="inter-4 text-red-500 ps-2">Minimum one tag is required</p>
-            }}
+            }
 
             <div class="flex flex-wrap gap-2">
-              @for (tag of tags; track $index) {
+              @for (tag of tagEnter.controls; track $index;) {
               <div
                 class="flex gap-1 items-center px-[10px] py-1 border border-gray-300 rounded-md"
               >
                 <div class="inter-5 text-sm text-gray-700 cursor-default">
-                  {{ tag }}
+                  {{ tag.value }}
                 </div>
                 <div>
                   <svg
-                    (click)="removeTag($index)"
+                    (click)="removeTag(tagEnter.controls.indexOf(tag))"
                     class="w-4 h-4 text-gray-400 hover:text-gray-800 dark:text-white cursor-pointer"
                     aria-hidden="true"
                     xmlns="http://www.w3.org/2000/svg"
@@ -1138,24 +1157,29 @@
           </div>
           }
         </div>
+
+        <!------------------------------------------------------------------------------------------------------- ----------------------------------------- Video Input Section --------------------------------------------- ----------------------------------------------------------------------------------------------------------->
+
         <div id="initialState" class="flex flex-col gap-[6px]">
           <div class="inter-5 text-gray-700 text-sm">Record video</div>
-          <div
-            class="flex flex-col gap-3 items-center justify-center px-6 py-4 border border-gray-200 rounded-xl"
-          >
-            <div class="cursor-pointer">
-              <img
-                src="../../../assets/images/record_video.png"
-                alt=""
-                class="w-10 h-auto"
-              />
-            </div>
-            <div class="text-sm inter-4 text-gray-600">
-              <span
-                class="inter-6 text-[#6941C6] text-sm font-semibold cursor-pointer"
-                >Click</span
+          <div class="flex flex-col items-center">
+            <video
+              #videoElement
+              class="mb-4 max-w-72"
+              autoplay
+              playsinline
+            ></video>
+            <div class="flex space-x-4">
+              <button
+                class="bg-blue-500 text-white px-4 py-2 rounded"
+                (click)="isRecording ? stopRecording() : startRecording()"
               >
-              to start recording...
+                {{ isRecording ? "Stop Recording" : "Start Recording" }}
+              </button>
+            </div>
+            <div *ngIf="videoSrc" class="mt-4">
+              <h3 class="text-lg font-semibold">Recorded Video:</h3>
+              <video [src]="videoSrc" controls class="mt-2 max-w-72"></video>
             </div>
           </div>
         </div>
@@ -1271,6 +1295,7 @@
         <div>
           <button
             type="submit"
+            (click)="onSubmitAddJournal()"
             class="px-4 py-[10px] inter-6 text-sm font-semibold text-white bg-[#7F56D9] border border-[#7F56D9] rounded-lg hover:bg-[#6941C6] hover:border-[#6941C6]"
           >
             Save
@@ -1280,3 +1305,32 @@
     </form>
   </div>
 </div>
+
+<!------------------------------------------------------------------------------------------------------------- --------------------------------------------- Confirm Deletion -------------------------------------------------- ---------------------------------------------------------------------------------------------------------->
+<div
+  *ngIf="showDeleteConfirmation"
+  class="fixed inset-0 flex items-center justify-center z-50"
+>
+  <div class="bg-white rounded-lg shadow-lg p-5">
+    <h3 class="text-lg font-semibold">Confirm Deletion</h3>
+    <p>Are you sure you want to delete this video?</p>
+    <div class="flex justify-end gap-2 mt-4">
+      <button
+        class="px-4 py-[10px] inter-6 text-base font-semibold text-gray-700 bg-white border border-gray-200 rounded-lg hover:bg-gray-100"
+        (click)="closeDeleteConfirmation()"
+      >
+        Cancel
+      </button>
+      <button
+        class="px-4 py-[10px] inter-6 text-base font-semibold text-white bg-[#7F56D9] border border-[#7F56D9] rounded-lg hover:bg-[#6941C6] hover:border-[#6941C6]"
+        (click)="confirmDelete()"
+      >
+        Delete
+      </button>
+    </div>
+  </div>
+</div>
+<div
+  *ngIf="showDeleteConfirmation"
+  class="fixed inset-0 bg-black opacity-50 z-40"
+></div>
