--- a/src/app/pages/journal/journal.component.css
+++ b/src/app/pages/journal/journal.component.css
@@ -46,6 +46,43 @@
   z-index: 3;
 }
 
-::ng-deep img {
+::ng-deep .description img {
   border-radius: 12px;
+}
+::ng-deep .description p {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 16px;
+  column-gap: 24px;
+  align-items: baseline;
+}
+
+audio::-webkit-media-controls-panel {
+  background-color: white;
+}
+audio::-webkit-media-controls-play-button {
+  background-color: #9e77ed;
+  font: white;
+  border-radius: 50%;
+  outline: #9e77ed44 8px solid;
+}
+audio::-webkit-media-controls-current-time-display {
+  color: #344054;
+  padding-inline-start: 10px;
+}
+audio::-webkit-media-controls-time-remaining-display {
+  color: #344054;
+  padding-inline-end: 6px;
+}
+audio::-webkit-media-controls-timeline {
+  border-radius: 40px;
+  font: #9e77ed;
+}
+audio::-webkit-media-controls-volume-slider {
+  border-radius: 50px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+audio::-webkit-media-controls-mute-button {
+  border-radius: 50%;
 }
