--- a/src/app/pages/journal/journal.component.html
+++ b/src/app/pages/journal/journal.component.html
@@ -535,7 +535,7 @@
         (click)="onOptionEditDelete(journalEntries.indexOf(selectedEntry))"
       >
         <svg
-          class="w-[24px] h-[24px] text-gray-500 hover:bg-gray-100 rounded-lg hover:border hover:border-gray-500"
+          class="w-6 h-6 text-gray-500 hover:bg-gray-100 rounded-lg hover:border hover:border-gray-500"
           aria-hidden="true"
           xmlns="http://www.w3.org/2000/svg"
           width="24"
@@ -546,7 +546,7 @@
           <path
             stroke="currentColor"
             stroke-linecap="round"
-            stroke-width="2"
+            stroke-width="3"
             d="M6 12h.01m6 0h.01m5.99 0h.01"
           />
         </svg>
@@ -554,7 +554,7 @@
       <!-- Dropdown menu -->
       <div
         *ngIf="isEditDelete"
-        class="z-10 absolute top-8 right-0 flex-col bg-white rounded-lg dark:bg-gray-700 w-56 shadow-lg shadow-[#10182814]"
+        class="z-10 absolute top-8 right-0 flex-col bg-white rounded-lg w-56 shadow-lg shadow-[#10182814]"
       >
         <div
           (click)="onEditJournalEntry(journalEntries.indexOf(selectedEntry))"
@@ -630,7 +630,7 @@
           </div>
           <div>
             <svg
-              class="w-5 h-5 text-[#7F56D9] dark:text-white hidden group-hover:block"
+              class="w-5 h-5 text-[#7F56D9] hidden group-hover:block"
               aria-hidden="true"
               xmlns="http://www.w3.org/2000/svg"
               width="24"
@@ -701,7 +701,7 @@
       </div>
     </div>
     <div
-      class="w-full text-gray-900 inter-4 text-md flex flex-col gap-3 description"
+      class="w-full text-gray-900 inter-4 text-md flex flex-col gap-4 description"
       [innerHTML]="selectedEntry?.description"
     ></div>
 
@@ -843,7 +843,7 @@
               />
               <svg
                 (click)="addTag()"
-                class="absolute right-5 top-1/2 -translate-y-1/2 w-[24px] h-[24px] text-gray-400 hover:text-blue-500 cursor-pointer dark:text-white"
+                class="absolute right-5 top-1/2 -translate-y-1/2 w-[24px] h-[24px] text-gray-400 hover:text-blue-500 cursor-pointer"
                 aria-hidden="true"
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
@@ -1063,25 +1063,6 @@
             <div class="flex flex-col gap-4">
               <div class="flex justify-between items-center">
                 <div class="text-gray-700 inter-5 text-sm">Record 1</div>
-                <!-- <div>
-                  <svg
-                    class="w-[20px] h-[20px] text-gray-500 dark:text-white cursor-pointer hover:text-gray-700 dark:hover:text-gray-300"
-                    aria-hidden="true"
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="24"
-                    height="24"
-                    fill="none"
-                    viewBox="0 0 24 24"
-                  >
-                    <path
-                      stroke="currentColor"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="M5 7h14m-9 3v8m4-8v8M10 3h4a1 1 0 0 1 1 1v3H9V4a1 1 0 0 1 1-1ZM6 7h12v13a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V7Z"
-                    />
-                  </svg>
-                </div> -->
               </div>
               <div class="flex lg:gap-3 gap-2">
                 <div class="flex lg:gap-3 gap-2 items-center">
@@ -1098,7 +1079,7 @@
                   <div class="flex gap-1 items-center">
                     <div>
                       <svg
-                        class="w-[24px] h-[24px] text-black dark:text-white"
+                        class="w-[24px] h-[24px] text-black"
                         aria-hidden="true"
                         xmlns="http://www.w3.org/2000/svg"
                         width="24"
@@ -1128,12 +1109,31 @@
             *ngIf="editMode && selectedEntry"
             class="mt-4 flex flex-col gap-2"
           >
-            <div *ngIf="selectedEntry?.audio">
+            <div class="relative w-80" *ngIf="selectedEntry?.audio">
               <audio
-                class="border border-gray-200 rounded-xl h-16 items-center p-[6px] max-w-80 w-full"
+                class="border border-gray-200 rounded-xl h-16 items-center p-[6px] pr-4 lg:w-80 max-w-80 w-full"
                 [src]="selectedEntry?.audio"
                 controls
               ></audio>
+
+              <svg
+                (click)="openDeleteConfirmation(selectedEntry, 'audio')"
+                class="absolute top-1/2 transform -translate-y-1/2 right-2 w-5 h-5 text-gray-500 hover:text-red-500 cursor-pointer"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                fill="none"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M5 7h14m-9 3v8m4-8v8M10 3h4a1 1 0 0 1 1 1v3H9V4a1 1 0 0 1 1-1ZM6 7h12v13a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V7Z"
+                />
+              </svg>
             </div>
           </div>
         </div>
@@ -1221,7 +1221,10 @@
                     controls
                     class="border border-gray-200 rounded-xl max-w-72 w-full"
                   ></video>
-                  <div class="absolute top-8 right-8">
+                  <div
+                    class="absolute top-8 right-8"
+                    (click)="openDeleteConfirmation(selectedEntry, 'video')"
+                  >
                     <svg
                       class="w-8 h-8 bg-[#0C111D4D] p-1 rounded-full cursor-pointer hover:bg-[#0C111D] text-white"
                       aria-hidden="true"
@@ -1447,7 +1450,7 @@
 >
   <div class="bg-white rounded-lg shadow-lg p-5">
     <h3 class="text-lg font-semibold">Confirm Deletion</h3>
-    <p>Are you sure you want to delete this video?</p>
+    <p>Are you sure you want to delete this {{ flag }}?</p>
     <div class="flex justify-end gap-2 mt-4">
       <button
         class="px-4 py-[10px] inter-6 text-base font-semibold text-gray-700 bg-white border border-gray-200 rounded-lg hover:bg-gray-100"
@@ -1457,7 +1460,7 @@
       </button>
       <button
         class="px-4 py-[10px] inter-6 text-base font-semibold text-white bg-[#7F56D9] border border-[#7F56D9] rounded-lg hover:bg-[#6941C6] hover:border-[#6941C6]"
-        (click)="confirmDelete()"
+        (click)="confirmDelete(selectedEntry)"
       >
         Delete
       </button>
