--- a/src/app/pages/journal/journal.component.html
+++ b/src/app/pages/journal/journal.component.html
@@ -145,24 +145,25 @@
         <div class="flex flex-col gap-1">
           @for (page of pagesArray; track $index) {
           <div
-            class="flex items-center justify-between px-3 py-2 cursor-default hover:bg-gray-100 group"
+            class="flex items-center justify-between px-3 py-2 cursor-default hover:bg-gray-100 group relative"
           >
             <div class="flex items-center gap-3">
               <div>
-                <img
-                  class="h-6 w-6"
-                  src="../../../assets/images/icons/travel.png"
-                  alt=""
-                />
+                <div class="flex justify-center items-center text-xl leading-5">
+                  {{ page.icon }}
+                </div>
               </div>
               <div class="inter-5 text-sm text-gray-700">
                 {{ page.name }}
               </div>
             </div>
-            <div class="relative">
-              <button (click)="openOption()" class="hidden group-hover:block">
+            <div class="">
+              <button
+                (click)="openOption(page)"
+                class="hidden group-hover:block"
+              >
                 <svg
-                  class="w-6 h-6 text-gray-800 hover:text-black"
+                  class="w-5 h-5 text-gray-800 hover:text-black"
                   aria-hidden="true"
                   xmlns="http://www.w3.org/2000/svg"
                   width="24"
@@ -173,17 +174,18 @@
                   <path
                     stroke="currentColor"
                     stroke-linecap="round"
-                    stroke-width="2"
+                    stroke-width="3"
                     d="M6 12h.01m6 0h.01m5.99 0h.01"
                   />
                 </svg>
               </button>
               <div
-                *ngIf="pageEditDelete"
-                class="absolute flex flex-col gap-1 z-10 top-8 -right-3 w-40"
+                *ngIf="showLess[page.id]"
+                class="absolute flex flex-col gap-1 z-10 top-10 -right-3 w-40 border border-gray-200 rounded-xl"
               >
                 <div
-                  class="flex justify-between group bg-white hover:bg-gray-100 p-2"
+                  (click)="editPage(page)"
+                  class="flex justify-between group bg-white hover:bg-gray-100 p-2 rounded-t-xl cursor-pointer"
                 >
                   <div>Edit Page</div>
                   <div class="hidden group-hover:block">
@@ -207,7 +209,8 @@
                   </div>
                 </div>
                 <div
-                  class="flex justify-between group bg-white hover:bg-gray-100 p-2"
+                  (click)="openDeleteConfirmationPage(page.id)"
+                  class="flex justify-between group bg-white hover:bg-gray-100 p-2 rounded-b-xl cursor-pointer"
                 >
                   <div>Delete Page</div>
                   <div class="hidden group-hover:block">
@@ -1528,37 +1531,73 @@
     </div>
   </div>
 </div>
+<div
+  *ngIf="pageDeleteConfirmationModal"
+  class="fixed flex items-center inset-0 bg-black bg-opacity-30 justify-center z-50"
+>
+  <div class="bg-white rounded-lg shadow-lg p-5">
+    <h3 class="text-lg font-semibold">Confirm Deletion</h3>
+    <p>Are you sure you want to delete this Page?</p>
+    <div class="flex justify-end gap-2 mt-4">
+      <button
+        class="px-4 py-[10px] inter-6 text-base font-semibold text-gray-700 bg-white border border-gray-200 rounded-lg hover:bg-gray-100"
+        (click)="closeDeleteConfirmationPage()"
+      >
+        Cancel
+      </button>
+      <button
+        class="px-4 py-[10px] inter-6 text-base font-semibold text-white bg-[#7F56D9] border border-[#7F56D9] rounded-lg hover:bg-[#6941C6] hover:border-[#6941C6]"
+        (click)="confirmDeletePage(selectedPageId)"
+      >
+        Delete
+      </button>
+    </div>
+  </div>
+</div>
 
 @if (newPageModal) {
 <div
   class="fixed inset-0 z-50 bg-black bg-opacity-30 flex justify-center items-center"
 >
-  <div class="flex flex-col bg-white rounded-lg shadow-xl shadow-black p-5">
-    <div class="inter-6 text-xl font-semibold mb-4">Create a New Page</div>
+  <div
+    class="relative flex flex-col bg-white rounded-lg shadow-xl shadow-black p-5 m-5 lg:m-0"
+  >
+    <div class="inter-6 text-xl font-semibold mb-4">New Page</div>
     <form
       [formGroup]="newPageForm"
       (keydown.enter)="preventSubmit($event)"
       class="w-full flex flex-col gap-4"
     >
       <div>
-        <label class="inter-4 text-base text-gray-700">Page Name</label>
+        <label class="inter-4 text-base text-gray-700">Title</label>
         <input
           class="py-[10px] px-[14px] w-full border border-gray-200 rounded-xl hover:border-2 hover:border-blue-500 focus:outline-none focus:ring-4 focus:ring-blue-300 focus:border-blue-500 focus:border-2 inter-4 text-base text-gray-500 transition duration-300 mt-1"
           formControlName="pageName"
+          placeholder="Page title"
         />
         @if (pageName && pageName.invalid && pageName.touched) {
-        <p class="inter-4 text-red-500 ps-2">Page Name is required</p>
+        <p class="inter-4 text-red-500 ps-2">Page title is required</p>
         }
       </div>
-      <div class="">
-        <label class="inter-4 text-base text-gray-700">Page Icon</label>
-        <input class="w-full mt-1" type="file" formControlName="pageIcon" />
-        @if (pageIcon && pageIcon.invalid && pageIcon.touched) {
-        <p class="inter-4 text-red-500 ps-2">Page Icon is required</p>
-        }
+      <div class="m-0 flex flex-col">
+        <label class="inter-4 text-base text-gray-700 w-fit">Page Icon </label>
+        <!-- //emoji picker -->
+        <emoji-mart
+          class="mt-1"
+          set="apple"
+          (emojiSelect)="onEmojiSelect($event)"
+        ></emoji-mart>
+        @if (pageIcon && pageIcon.invalid && pageIcon.touched) {<span
+          class="inter-4 text-red-500 ps-2"
+          >Page icon is required</span
+        >}
+        <div *ngIf="selectedEmoji">
+          Selected Icon:
+          <span class="text-2xl inter-5">{{ selectedEmoji.emoji.native }}</span>
+        </div>
       </div>
       <div class="w-full h-[1px] bg-gray-200"></div>
-      <div class="flex justify-end gap-2">
+      <div class="grid grid-cols-2 gap-2">
         <button
           (click)="closeNewPageModal()"
           class="px-4 py-[10px] inter-6 text-base font-semibold text-gray-700 bg-white border border-gray-200 rounded-lg hover:bg-gray-100"
@@ -1567,13 +1606,45 @@
         </button>
         <button
           type="button"
+          *ngIf="!pageEditMode"
           (click)="onAddNewPage()"
-          class="px-4 py-[10px] inter-6 text-base font-semibold text-white bg-[#7F56D9] border border-[#7F56D9] rounded-lg hover:bg-[#6941C6] hover:border-[#6941C6]"
+          class="px-4 py-[10px] inter-6 text-base font-semibold text-white bg-[#7F56D9] border border-[#7F56D9] rounded-lg hover:bg-[#6941C6] hover:border-[#6941C6] w-full"
         >
-          Create
+          Add
+        </button>
+        <button
+          *ngIf="pageEditMode"
+          type="button"
+          (click)="updatePage()"
+          class="px-4 py-[10px] inter-6 text-base font-semibold text-white bg-[#7F56D9] border border-[#7F56D9] rounded-lg hover:bg-[#6941C6] hover:border-[#6941C6] w-full"
+        >
+          Update
         </button>
       </div>
     </form>
+
+    <button
+      (click)="closeNewPageModal()"
+      class="absolute top-4 right-4 text-gray-800 hover:text-red-500"
+    >
+      <svg
+        class="w-6 h-6"
+        aria-hidden="true"
+        xmlns="http://www.w3.org/2000/svg"
+        width="24"
+        height="24"
+        fill="none"
+        viewBox="0 0 24 24"
+      >
+        <path
+          stroke="currentColor"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2.5"
+          d="M6 18 17.94 6M18 18 6.06 6"
+        />
+      </svg>
+    </button>
   </div>
 </div>
 }
